--- a/package.json
+++ b/package.json
@@ -6,9 +6,21 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.0",
+    "bootstrap": "^4.5.3",
+    "bootstrap-icons": "^1.1.0",
     "react": "^17.0.1",
+    "react-bootstrap-date-picker": "^5.1.0",
+    "react-bootstrap-icons": "^1.1.0",
+    "react-datepicker": "^3.3.0",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
+    "react-loader-spinner": "^3.1.14",
+    "react-redux": "^7.2.2",
+    "react-router-dom": "^5.2.0",
+    "redux": "^4.0.5",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^2.3.0",
+    "redux-timeout": "^2.0.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
